# git-template

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: default.yaml  publish.yaml
DEBIAN/: control
git_templates/: main.py
git_templates/commands/: __init__.py  add.py  remove.py  update.py  utils.py
git_templates/test/: test_main.py
test/: test_main.py
usr/lib/git-templates/: add_template.py  remove_template.py  update_template.py
usr/lib/git_templates/: main.py
usr/lib/git_templates/commands/: add.py  remove.py  update.py  utils.py
usr/lib/git_templates/test/: test_main.py
