[tool.poetry]
name = "git-template"
version = "0.1.0"
description = ""
authors = ["Octavio <octavio.delser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pre-commit = "^3.6.2"
safety = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
